--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,4 +1,4 @@
-spring.mvc.view.prefix: /src/main/webapp/WEB-INF/jsp/
+spring.mvc.view.prefix: /WEB-INF/jsp/
 spring.mvc.view.suffix: .jsp
 
 welcome.message: Welcome to EPAM
