--- a/pom.xml
+++ b/pom.xml
@@ -127,6 +127,10 @@
 		<artifactId>commons-exec</artifactId>
 		<version>1.3</version>
 	</dependency>
+	<dependency>
+		<groupId>org.springframework.boot</groupId>
+		<artifactId>spring-boot-starter-data-solr</artifactId>
+	</dependency>
 	</dependencies>
 
 	<build>
