--- a/pom.xml
+++ b/pom.xml
@@ -131,6 +131,16 @@
 		<groupId>org.springframework.boot</groupId>
 		<artifactId>spring-boot-starter-data-solr</artifactId>
 	</dependency>
+			<dependency>
+			<groupId>com.googlecode.json-simple</groupId>
+			<artifactId>json-simple</artifactId>
+			<version>1.1.1</version>
+		</dependency>
+		<dependency>
+			<groupId>com.fasterxml.jackson.core</groupId>
+			<artifactId>jackson-databind</artifactId>
+			<version>2.6.3</version>
+		</dependency>
 	</dependencies>
 
 	<build>
